# cmake-tutorial

./: .gitignore  CMakeLists.txt  main.c  main.cpp  version.cmake
libs/mylib/: CMakeLists.txt
libs/mylib/inc/: mylib.h
libs/mylib/src/: mylib.cpp
libs/mylib_a/: CMakeLists.txt
libs/mylib_a/inc/: mylib_a.h
libs/mylib_a/src/: mylib_a.cpp
libs/mylib_b/: CMakeLists.txt
libs/mylib_b/inc/: mylib_b.h
libs/mylib_b/src/: mylib_b.cpp
mylib/: CMakeLists.txt
src/: main.c  main.cpp
